# da-codec

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  da_test.go  go.mod  go.sum  run_test.sh
.github/: pull_request_template.md
.github/workflows/: codec.yml
codecv0/: codecv0.go  codecv0_test.go
codecv1/: codecv1.go  codecv1_test.go
encoding/: bitmap.go  bitmap_test.go  codecv0.go  codecv0_test.go  codecv0_types.go  codecv1.go  codecv1_test.go  codecv1_types.go  codecv2.go  codecv2_test.go  codecv3.go  codecv3_test.go  codecv3_types.go  codecv4.go  codecv4_test.go  codecv5.go  codecv6.go  codecv6_types.go  codecv7.go  codecv7_test.go  codecv7_types.go  codecv8.go  codecv8_test.go  codecv8_types.go  da.go  da_test.go  dabatch.go  dablock.go  dachunk.go  encoding.go  interfaces.go  interfaces_test.go
encoding/codecv0/: codecv0.go  codecv0_test.go
encoding/codecv1/: codecv1.go  codecv1_test.go
encoding/codecv2/: add_scroll_prefix_in_zstd_related_symbols.sh  codecv2.go  codecv2_test.go  libscroll_zstd_darwin_arm64.go  libscroll_zstd_linux_amd64.go  libscroll_zstd_linux_arm64.go  replace.sh
encoding/codecv3/: codecv3.go  codecv3_test.go
encoding/codecv4/: codecv4.go  codecv4_test.go
encoding/dacodec/: dacodec.go
encoding/testdata/: bug_roundtrip.orig
encoding/zstd/: zstd.go  (+4 more)
libzstd/: .gitignore  Cargo.toml  Makefile
libzstd/encoder/: Cargo.toml
libzstd/encoder-legacy/: Cargo.toml  Makefile
libzstd/encoder-legacy/src/: lib.rs
libzstd/encoder-standard/: Cargo.toml  Makefile
libzstd/encoder-standard/src/: lib.rs
libzstd/encoder/src/: lib.rs
libzstd/src/: lib.rs
rs/: Makefile
(+1 files in other folders)
