[workspace]

[package]
name = "scroll-zstd"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"

[lib]
crate-type = ["staticlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-scroll-encoder = { git = "https://github.com/scroll-tech/reth.git", branch = "refactor-extract-scroll-zstd-encoder", default-features = false }

[features]
scroll = [ ]
