[package]
name = "encoder-standard"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "encoder_standard"
crate-type = ["staticlib"]

[dependencies]
zstd = { version = "=0.13.3", features = ["experimental"] }
